Fixed some spacing to the sos section.

--- a/css/index.css
+++ b/css/index.css
@@ -107,13 +107,14 @@ h4 {
   background-position: center center; }
 
 .section_sos__header {
-  border-bottom: 2px solid; }
+  border-bottom: 2px solid;
+  margin-inline-start: 16px; }
 
 .section_sos__header > .container {
   font-family: 'Bebas Neue';
   display: flex;
   flex-direction: column-reverse;
-  margin-inline-start: 13px;
+  margin-inline-start: -5px;
   margin-inline-end: 34px; }
 
 .sectoon_sos__heading {
